fix overlapping circle with axis

--- a/css/main.css
+++ b/css/main.css
@@ -97,16 +97,10 @@ a path  {
    transform: scale(1.5);
 }
 
-.axisWhite line{
-  stroke: #FFF;
-}
 
-.axisWhite path{
-  stroke: #FFF;
-}
-
-.axisWhite text{
+.axisWhite{
   fill: #FFF;
+  stroke: #FFF;
 }
 
 .slideTitle{
